--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>no.kantega</groupId>
-    <artifactId>spring-and-react</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>testsr</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>spring-and-react</name>
@@ -59,8 +59,8 @@
                             <goal>install-node-and-npm</goal>
                         </goals>
                         <configuration>
-                            <nodeVersion>v8.9.4</nodeVersion>
-                            <npmVersion>5.6.0</npmVersion>
+                            <nodeVersion>v12.18.3</nodeVersion>
+                            <npmVersion>6.14.6</npmVersion>
                         </configuration>
                     </execution>
                     <execution>
